--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-    "name": "Password Generator",
-    "short_name": "PwdGen",
+    "name": "Cipher Alchemist",
+    "short_name": "CiAlch",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007BFF",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon.png",
+            "src": "icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
