--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -9,13 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Get commit info
+      - name: Get commit info and IST time
+        id: version
         run: |
-          echo "Version: $(git rev-parse --short HEAD) - $(date -u +'%Y-%m-%d %H:%M:%S UTC')" > version.txt
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          IST_TIME=$(TZ='Asia/Kolkata' date +'%Y-%m-%d %H:%M:%S IST')
+          echo "🔖 v$COMMIT_HASH · $IST_TIME · 🚀 Built with ❤️ by Dhruvin Soni" > version.txt
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_OUTPUT
+          echo "IST_TIME=$IST_TIME" >> $GITHUB_OUTPUT
       - name: Commit version.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git add version.txt
-          git commit -m "Update version.txt [skip ci]" || echo "No changes to commit"
+          git commit -m "🔖 chore: update version.txt [skip ci]" || echo "No changes to commit"
           git push
