refactor: improve version display and metadata handling
This commit implements a more robust version display system with the following improvements:

- Add meta tag in HTML for version injection during build time
- Refactor version display logic to first check meta tag, then fall back to version.txt
- Split version display into separate elements for better mobile presentation
- Simplify the format in update-version.yml workflow
- Restructure footer to prioritize version information

These changes make the version display more maintainable and create a clearer
separation between version metadata and attribution. The system now handles
both build-time injection and runtime fetching, improving reliability across
deployment scenarios.

--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
           IST_TIME=$(TZ='Asia/Kolkata' date +'%Y-%m-%d %H:%M:%S IST')
-          echo "🔖 v$COMMIT_HASH · $IST_TIME · 🚀 Built with ❤️ by Dhruvin Soni" > version.txt
+          echo "🔖 v$COMMIT_HASH · $IST_TIME · 🚀" > version.txt
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_OUTPUT
           echo "IST_TIME=$IST_TIME" >> $GITHUB_OUTPUT
       - name: Commit version.txt
