--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -17,12 +17,17 @@ jobs:
           echo "🔖 v$COMMIT_HASH · $IST_TIME · 🚀" > version.txt
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_OUTPUT
           echo "IST_TIME=$IST_TIME" >> $GITHUB_OUTPUT
-      - name: Commit version.txt
+      - name: Generate CHANGELOG.md
+        run: |
+          echo "# 📝 Changelog\n" > CHANGELOG.md
+          echo "_Last 50 meaningful changes. Auto-generated on each push to main._\n" >> CHANGELOG.md
+          git log --pretty=format:"- %s (%h) [%an, %ad]" --date=short --no-merges -n 50 | grep -v -i 'chore: update version.txt' >> CHANGELOG.md
+      - name: Commit version.txt and CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git add version.txt
-          git commit -m "🔖 chore: update version.txt [skip ci]" || echo "No changes to commit"
+          git add version.txt CHANGELOG.md
+          git commit -m "🔖 chore: update version.txt and CHANGELOG.md [skip ci]" || echo "No changes to commit"
           git push
