--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for better changelog
       - name: Get commit info and IST time
         id: version
         run: |
@@ -17,11 +19,40 @@ jobs:
           echo "🔖 v$COMMIT_HASH · $IST_TIME · 🚀" > version.txt
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_OUTPUT
           echo "IST_TIME=$IST_TIME" >> $GITHUB_OUTPUT
+      
       - name: Generate CHANGELOG.md
         run: |
-          echo "# 📝 Changelog\n" > CHANGELOG.md
-          echo "_Last 50 meaningful changes (excluding version bumps). Auto-generated on each push to main._\n" >> CHANGELOG.md
-          git log --pretty=format:"---\n**Date:** %ad  \n**Commit:** [%h](https://github.com/dhruvinrsoni/cipher-alchemist/commit/%H)  \n**Author:** %an\n\n#### %s\n\n%b\n" --date='iso-local' --no-merges -n 50 | grep -v -i '\[skip ci\]' >> CHANGELOG.md
+          echo "# 📝 Changelog" > CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "_Last 50 meaningful changes (excluding version bumps). Auto-generated on each push to main._" >> CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "---" >> CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          
+          # Get the repository info for links
+          REPO_URL="https://github.com/${{ github.repository }}"
+            # Generate detailed changelog entries
+          git log --no-merges -n 50 --grep="\[skip ci\]" --invert-grep --pretty=format:"%H|%cd|%an|%s|%b" --date=format:"%Y-%m-%d %H:%M:%S %z" | while IFS='|' read -r hash date author subject body; do
+            if [ ! -z "$hash" ]; then
+              short_hash=$(echo "$hash" | cut -c1-7)
+              
+              echo "**Date:** $date  " >> CHANGELOG.md
+              echo "**Commit:** [$short_hash]($REPO_URL/commit/$hash)  " >> CHANGELOG.md
+              echo "**Author:** $author" >> CHANGELOG.md
+              echo "" >> CHANGELOG.md
+              echo "#### $subject" >> CHANGELOG.md
+              echo "" >> CHANGELOG.md
+              
+              # Add body if it exists and is not empty
+              if [ ! -z "$body" ] && [ "$body" != " " ]; then
+                echo "$body" >> CHANGELOG.md
+                echo "" >> CHANGELOG.md
+              fi
+              
+              echo "---" >> CHANGELOG.md
+              echo "" >> CHANGELOG.md
+            fi
+          done
       - name: Commit version.txt and CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
