--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -1,8 +1,9 @@
 name: Update Version
 
 on:
-  push:
-    branches: [main]
+#   push:
+#     branches: [main]
+    workflow_dispatch:  # Manual trigger only
 
 jobs:
   update-version:
