chore: refactor version update workflow automation
- Reversed workflow triggers to enable automatic versioning
- Renamed old workflow to "Update Version Old" and made it manual-only
- Restored automatic versioning on main branch pushes
- Removed footer line from auto-generated changelog

Impact: Improves CI/CD by automating version updates on merge to main
while keeping the manual option available if needed. Simplifies the
changelog format by removing the redundant auto-generation notice.

--- a/.github/workflows/update-version-old.yml
+++ b/.github/workflows/update-version-old.yml
@@ -1,8 +1,9 @@
-name: Update Version
+name: Update Version Old
 
 on:
-  push:
-    branches: [main]
+#   push:
+#     branches: [main]
+    workflow_dispatch:  # Manual trigger only
 
 jobs:
   update-version:
