--- a/.github/workflows/deployment-status.yml
+++ b/.github/workflows/deployment-status.yml
@@ -90,8 +90,8 @@ jobs:
           echo "================================"
 
       - name: 💾 Archive Status Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: deployment-status-$(date +%Y%m%d-%H%M%S)
+          name: deployment-status-report
           path: STATUS_REPORT.md
           retention-days: 30
