docs: Consolidate documentation structure and protect workflows
BREAKING CHANGES: Removed 6 documentation files and 3 validation scripts

Reason:
• Scattered documentation across 8 .md files created maintenance overhead
• Duplicate validation scripts led to inconsistent release processes
• GitHub Actions workflows were recreating deleted documentation files
• Complex file structure hindered developer onboarding and project navigation

Changes Made:

Documentation Restructure (8 → 4 files):
• Consolidated MODULAR-RELEASE-ARCHITECTURE.md → DEVELOPMENT.md
• Merged RELEASE-v1.0.0.md + RELEASE_NOTES.md + ROLLBACK_NOTES.md → RELEASES.md
• Removed SIMPLIFICATION-SUMMARY.md (content integrated into DEVELOPMENT.md)
• Enhanced README.md with cross-references and improved navigation
• Updated CHANGELOG.md validation system descriptions

Script Consolidation (3 → 1 unified tool):
• Merged quick-release.bat + validate-release.bat + release-v1.0.0.bat → release-validator.bat
• Added version override capability and enhanced error reporting
• Improved validation coverage with comprehensive functionality

Workflow Protection (4 steps across 3 files):
• .github/workflows/create-tag-release.yml: Protected changelog generation step
• .github/workflows/deployment-status.yml: Protected status report generation
• .github/workflows/rollback.yml: Protected rollback notes and release creation steps
• Added `if: false` conditions with explanatory comments to prevent file recreation

Visual Documentation Structure:
Previous (8 files):                    Current (4 files):
 ├── README.md                         ├── README.md (enhanced)
 ├── CHANGELOG.md                      ├── CHANGELOG.md (updated)
 ├── MODULAR-RELEASE-ARCHITECTURE.md   ├── DEVELOPMENT.md (comprehensive)
 ├── RELEASE-v1.0.0.md                 └── RELEASES.md (consolidated)
 ├── RELEASE_NOTES.md
 ├── ROLLBACK_NOTES.md
 ├── SIMPLIFICATION-SUMMARY.md
 └── [various .bat scripts]           → release-validator.bat (unified)

Impact

--- a/.github/workflows/deployment-status.yml
+++ b/.github/workflows/deployment-status.yml
@@ -54,7 +54,8 @@ jobs:
           echo "RELEASE_COUNT=$RELEASE_COUNT" >> $GITHUB_ENV
           echo "📊 Total releases: $RELEASE_COUNT"
 
-      - name: 📊 Generate Status Report
+      - name: 📊 Generate Status Report (DISABLED - using consolidated docs)
+        if: false  # Temporarily disabled - using consolidated documentation structure
         run: |
           echo "# 📊 Cipher Alchemist Deployment Status" > STATUS_REPORT.md
           echo "" >> STATUS_REPORT.md
