--- a/.github/workflows/create-tag-release.yml
+++ b/.github/workflows/create-tag-release.yml
@@ -103,7 +103,7 @@ jobs:
           IST_TIME=$(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')
           echo "🔖 v${{ github.event.inputs.version }} · $IST_TIME · 🚀 Release" > version.txt
           echo "✅ Updated version.txt with v${{ github.event.inputs.version }}"
-
+          
       - name: 📝 Update Manifest Version
         run: |
           if [ -f manifest.json ]; then
@@ -120,8 +120,8 @@ jobs:
             echo "⚠️ manifest.json not found, skipping version update"
           fi
 
-      - name: 📊 Generate Release Changelog
-        if: ${{ github.event.inputs.generate_changelog == 'true' }}
+      - name: 📊 Generate Release Changelog (DISABLED - using RELEASES.md)
+        if: false  # Temporarily disabled - using consolidated RELEASES.md instead
         run: |
           IST_TIME=$(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')
           echo "# 🚀 Release v${{ github.event.inputs.version }}" > RELEASE_NOTES.md
