--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -3,11 +3,11 @@ name: 🔄 Auto Version Update
 on:
   push:
     branches: [ main ]
-    # ✅ FIXED: Enhanced path filtering to prevent infinite loops
     paths-ignore:
       - '.github/workflows/**'
       - '**.md'
       - 'LICENSE'
+      - 'version.txt'  # ✅ KEY: Don't trigger on version.txt changes
   workflow_dispatch:
 
 jobs:
@@ -23,27 +23,55 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🔍 Check Skip Conditions
+      # ✅ NEW: Pre-sync check to prevent conflicts
+      - name: 🔄 Pre-Sync Safety Check
+        id: presync
+        run: |
+          echo "📥 Fetching latest remote state..."
+          git fetch origin main
+          
+          # Check if remote has moved ahead since trigger
+          BEHIND=$(git rev-list --count HEAD..origin/main)
+          AHEAD=$(git rev-list --count origin/main..HEAD)
+          
+          echo "behind=$BEHIND" >> $GITHUB_OUTPUT
+          echo "ahead=$AHEAD" >> $GITHUB_OUTPUT
+          echo "📊 Sync Status: $AHEAD ahead, $BEHIND behind"
+          
+          # If we're behind, someone else pushed while workflow was running
+          if [ $BEHIND -gt 0 ]; then
+            echo "⚠️ Remote moved ahead during workflow execution"
+            echo "conflict_risk=true" >> $GITHUB_OUTPUT
+          else
+            echo "conflict_risk=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: 🔍 Enhanced Skip Logic
         id: check_skip
         run: |
-          # ✅ ENHANCED: Multiple skip conditions
           COMMIT_MSG=$(git log -1 --pretty=%B)
           COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')
           
-          # Skip if commit message contains skip flags
+          # Original skip conditions
           if [[ "$COMMIT_MSG" == *"[skip ci]"* ]] || [[ "$COMMIT_MSG" == *"[ci skip]"* ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "reason=Skip CI flag in commit message" >> $GITHUB_OUTPUT
-            echo "⏭️ Skipping due to skip CI flag"
             exit 0
           fi
           
-          # Skip if commit is from GitHub Actions
           if [[ "$COMMIT_AUTHOR" == "github-actions[bot]" ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "reason=Commit from GitHub Actions bot" >> $GITHUB_OUTPUT
-            echo "⏭️ Skipping GitHub Actions bot commit"
+            exit 0
+          fi
+          
+          # ✅ NEW: Skip if conflict risk detected
+          if [[ "${{ steps.presync.outputs.conflict_risk }}" == "true" ]]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "reason=Conflict risk detected - remote ahead by ${{ steps.presync.outputs.behind }} commits" >> $GITHUB_OUTPUT
+            echo "⚠️ Skipping to prevent merge conflicts"
             exit 0
           fi
           
@@ -52,12 +80,11 @@ jobs:
           if [[ "$CHANGED_FILES" == "version.txt" ]]; then
             echo "skip=true" >> $GITHUB_OUTPUT
             echo "reason=Only version.txt changed" >> $GITHUB_OUTPUT
-            echo "⏭️ Skipping version-only update"
             exit 0
           fi
           
           echo "skip=false" >> $GITHUB_OUTPUT
-          echo "✅ All checks passed, proceeding with version update"
+          echo "✅ Safe to proceed with version update"
 
       - name: 📝 Update Development Version
         if: steps.check_skip.outputs.skip == 'false'
@@ -65,28 +92,65 @@ jobs:
           COMMIT_HASH=$(git rev-parse --short HEAD)
           IST_TIME=$(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')
           BRANCH_NAME=$(git branch --show-current)
-          
-          # ✅ ENHANCED: Include branch info and commit count
           COMMIT_COUNT=$(git rev-list --count HEAD)
+          
           echo "🔄 v${COMMIT_HASH} · $IST_TIME · 🚧 Dev Build #${COMMIT_COUNT} · ${BRANCH_NAME}" > version.txt
 
-      - name: 💾 Commit Version Update
+      # ✅ NEW: Conflict-safe commit with retry logic
+      - name: 💾 Smart Commit with Conflict Prevention
         if: steps.check_skip.outputs.skip == 'false'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
           if git diff --quiet version.txt; then
-            echo "No version changes to commit"
-          else
-            git add version.txt
-            git commit -m "🔄 Auto-update version to $(git rev-parse --short HEAD) [skip ci]
-            
-            Build: #$(git rev-list --count HEAD)
-            Trigger: ${{ github.event_name }}
-            Files changed: $(git diff --name-only HEAD~1 HEAD | tr '\n' ' ')"
-            git push origin main
+            echo "📝 No version changes to commit"
+            exit 0
           fi
+          
+          git add version.txt
+          git commit -m "🔄 Auto-update version to $(git rev-parse --short HEAD) [skip ci]
+          
+          Build: #$(git rev-list --count HEAD)
+          Trigger: ${{ github.event_name }}
+          Auto-generated version update"
+          
+          # ✅ SOLUTION: Retry push with auto-sync
+          echo "📤 Attempting to push with conflict prevention..."
+          for attempt in {1..3}; do
+            echo "🔄 Push attempt $attempt/3"
+            
+            if git push origin main; then
+              echo "✅ Successfully pushed on attempt $attempt"
+              break
+            else
+              echo "⚠️ Push failed on attempt $attempt"
+              
+              if [ $attempt -lt 3 ]; then
+                echo "📥 Syncing with remote and retrying..."
+                git fetch origin main
+                
+                # Try rebase first, fallback to merge
+                if git rebase origin/main; then
+                  echo "✅ Rebased successfully"
+                else
+                  echo "⚠️ Rebase failed, trying merge..."
+                  git rebase --abort
+                  git merge origin/main || {
+                    echo "❌ Cannot resolve conflicts automatically"
+                    echo "This will be handled in the next workflow run"
+                    exit 0
+                  }
+                fi
+                
+                sleep $((attempt * 2))  # Exponential backoff
+              else
+                echo "❌ Failed to push after 3 attempts"
+                echo "⏭️ Will be retried in next workflow run"
+                exit 0  # Don't fail the workflow
+              fi
+            fi
+          done
 
       - name: 🏗️ Setup Pages
         if: steps.check_skip.outputs.skip == 'false'
@@ -103,15 +167,26 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: ✅ Summary
+      - name: ✅ Enhanced Summary
         run: |
           if [ "${{ steps.check_skip.outputs.skip }}" = "true" ]; then
             echo "⏭️ Version update skipped"
             echo "📋 Reason: ${{ steps.check_skip.outputs.reason }}"
+            
+            # ✅ NEW: Provide guidance for manual resolution
+            if [[ "${{ steps.check_skip.outputs.reason }}" == *"Conflict risk"* ]]; then
+              echo ""
+              echo "🔧 For developers:"
+              echo "   • Run 'git pull origin main' before your next commit"
+              echo "   • This ensures your local branch is synchronized"
+              echo "   • Prevents merge conflicts on future pushes"
+            fi
           else
-            echo "✅ Version update completed"
+            echo "✅ Version update completed successfully"
             echo "📋 Details:"
             echo "   • New Version: $(cat version.txt)"
             echo "   • Deployed: ${{ steps.deployment.outputs.page_url || 'N/A' }}"
             echo "   • Time: $(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')"
+            echo ""
+            echo "💡 Next developer push will be conflict-free!"
           fi
