feat(ci/cd): implement auto-triggered deployment health verification
Reason:
- Manual health checks required after deployments causing potential delays in issue detection
- Lack of automated workflow communication between deployment and status verification
- Missing next steps information in workflow summaries
- Inconsistent IST timestamps across different workflows

Changes:
- Enhanced deployment-status.yml to auto-trigger after other workflow completions
- Added workflow_run triggers for Deploy, Create Tag & Release, and Rollback workflows
- Implemented smart conditional execution to skip checks if triggering workflow failed
- Added detailed "Next Steps" sections to all deployment-related workflows
- Improved status reporting with IST timestamps and workflow trigger information
- Updated documentation to reflect the enhanced workflow connections
- Restructured workflow diagrams to show automatic triggering relationships

Impact:
- Reduces manual intervention by automatically verifying deployment health
- Improves incident response time by detecting issues immediately after deployment
- Enhances workflow visibility with clear next steps and status tracking
- Maintains consistent IST timezone usage across all workflow outputs

Test:
- Verified auto-triggering works properly across all specified workflows
- Validated conditional execution when triggering workflows fail or succeed
- Confirmed status reports include proper attribution to source workflows

Docs:
- Updated DEVELOPMENT.md with enhanced workflow diagrams and descriptions
- Corrected workflow connections in documentation to reflect auto-triggering
- Added explanatory comments in workflows for maintainability

Compatibility:
- No breaking changes to existing workflow functionality
- All enhancements are additive and backward compatible

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/.github/workflows/create-tag-release.yml
+++ b/.github/workflows/create-tag-release.yml
@@ -158,11 +158,22 @@ jobs:
                 inputs: {
                   version_tag: '${{ needs.create-release.outputs.tag_name }}',
                   environment: 'production'
-                }
-              });
-              console.log('✅ Deployment workflow triggered successfully');
-            } catch (error) {
+                }              });
+              console.log('✅ Deployment workflow triggered successfully');            } catch (error) {
               console.error('❌ Failed to trigger deployment:', error);
               core.setFailed('Failed to trigger auto-deployment');
             }
+
+      - name: 🎉 Release Summary
+        run: |
+          echo "🏷️ Release created and deployment initiated!"
+          echo "📋 Summary:"
+          echo "   • Tag: ${{ needs.create-release.outputs.tag_name }}"
+          echo "   • Auto-deployment: Triggered for production"
+          echo "   • Time: $(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')"
+          echo ""
+          echo "📊 Next Steps:"
+          echo "   • Deployment workflow will run automatically"
+          echo "   • Status workflow will verify deployment health"
+          echo "   • Check Actions tab for progress updates"
 
