--- a/.github/workflows/deploy-by-version.yml
+++ b/.github/workflows/deploy-by-version.yml
@@ -101,8 +101,7 @@ jobs:
               RETRY_COUNT=$((RETRY_COUNT + 1))
               echo "⏳ Retry $RETRY_COUNT/$MAX_RETRIES - waiting 10 seconds..."
               sleep 10
-            fi
-          done
+            fi          done
           
           if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
             echo "⚠️ Deployment verification failed after $MAX_RETRIES attempts"
@@ -118,3 +117,7 @@ jobs:
           echo "   • URL: ${{ steps.deployment.outputs.page_url }}"
           echo "   • Force Deploy: ${{ github.event.inputs.force_deploy }}"
           echo "   • Time: $(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')"
+          echo ""
+          echo "📊 Next Steps:"
+          echo "   • Deployment status workflow will auto-run to verify health"
+          echo "   • Check the Actions tab for status updates"
