feat: Add comprehensive Phrase Suggestions system
Reason:
- Provide users with inspirational examples to easily get started with the cipher tool
- Reduce complexity barrier for new users by offering curated, meaningful phrases
- Enhance user experience with one-click phrase testing and exploration

Changes:
- Implemented 6 categories of phrase suggestions (Motivation, Tech, Wisdom, Success, Wellness, Spiritual)
- Added 48+ carefully curated inspirational phrases with emoji indicators
- Created interactive suggestion chips with smooth animations and visual feedback
- Integrated one-click phrase insertion with automatic strength analysis
- Added refresh functionality for discovering new suggestions
- Implemented collapsible UI section to optimize screen space
- Added keyboard navigation and accessibility support

Impact:
- Significantly improved user onboarding and discovery experience
- Reduced friction for users unsure what phrases to test
- Enhanced engagement through inspirational, meaningful examples
- Maintained clean, professional UI while adding substantial functionality

Test:
- Verified all 48+ suggestions work correctly with cipher transformations
- Tested responsive design across mobile and desktop devices
- Confirmed accessibility features and keyboard navigation
- Validated smooth animations and visual feedback systems

Docs:
- Updated README.md with feature highlights and descriptions
- Added technical implementation details in DEVELOPMENT.md
- Updated app description in manifest.json to mention the new feature

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Cipher Alchemist - Transform Phrases into Unbreakable Passwords",
   "short_name": "Cipher Alchemist",
   "version": "1.1.0",
-  "description": "Transform memorable phrases into cryptographically strong passwords using Vedic wisdom and modern security by @dhruvinrsoni",
+  "description": "Transform memorable phrases into cryptographically strong passwords with inspirational phrase suggestions, real-time strength analysis, and Vedic wisdom by @dhruvinrsoni",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
